--- a/public/itemized/index.html
+++ b/public/itemized/index.html
@@ -703,7 +703,7 @@
         
 
         <a href="/blog/textcreat/" class="image featured">
-            <img src="/date/pic19.jpg" alt="">
+            <img src="/img/2019/04/pic19.jpg" alt="">
         </a>
     
 
